--- a/GUI/Views/ClientsView.xaml
+++ b/GUI/Views/ClientsView.xaml
@@ -21,9 +21,27 @@
             Grid.RowSpan="2">
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <controls:ClientItem Client="{Binding}"/>
+                    <controls:ClientItem
+                        Client="{Binding}"
+                        MouseLeftButtonDown="Clients_MouseLeftButton"/>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
+
+        <controls:ClientProfile
+            Client="{Binding SelectedClient}"
+            DataContext="{Binding SelectedClient}"
+            Grid.Column="1">
+            <controls:ClientProfile.Style>
+                <Style TargetType="controls:ClientProfile">
+                    <Setter Property="Visibility" Value="Visible" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DataContext.SelectedClient, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" Value="{x:Null}">
+                            <Setter Property="Visibility" Value="Hidden" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </controls:ClientProfile.Style>
+        </controls:ClientProfile>
     </Grid>
 </UserControl>
