--- a/GUI/Controls/ClientProfile.xaml
+++ b/GUI/Controls/ClientProfile.xaml
@@ -5,6 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d" 
              d:DesignHeight="250" d:DesignWidth="250">
+    <UserControl.DataContext>
+        <Binding RelativeSource="{RelativeSource Self}" />
+    </UserControl.DataContext>
     <Grid
         RenderTransformOrigin="0.5,0.495"
         Background="Bisque">
@@ -21,12 +24,15 @@
         <StackPanel>
             <DockPanel Grid.Column="0" Grid.Row="0">
                 <TextBlock Text="Name: "/>
-                <TextBlock Text="{Binding Name}"/>
+                <TextBlock Text="{Binding Client.Name}"/>
             </DockPanel>
             <DockPanel>
                 <TextBlock Text="Address: "/>
-                <TextBlock Text="{Binding Address}"/>
+                <TextBlock Text="{Binding Client.Address}"/>
             </DockPanel>
+        </StackPanel>
+        <StackPanel Grid.Column="1">
+            <Button Content="DELETE" Click="DeleteButton_Click"/>
         </StackPanel>
     </Grid>
 </UserControl>
