--- a/GUI/Views/ClientsView.xaml
+++ b/GUI/Views/ClientsView.xaml
@@ -15,16 +15,18 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <ItemsControl 
+        <StackPanel>
+            <ItemsControl 
             ItemsSource="{Binding Clients}">
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <controls:ClientItem
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <controls:ClientItem
                         Client="{Binding}"
                         MouseLeftButtonDown="Clients_MouseLeftButton"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </StackPanel>
 
         <StackPanel
             Grid.Row="1"
@@ -38,9 +40,12 @@
             <RichTextBox x:Name="richTextBoxAddress" TextChanged="RichTextBoxAddress_TextChanged"/>
         </StackPanel>
 
+        
+        
         <controls:ClientProfile
             Client="{Binding DataContext.SelectedClient, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             DeleteClicked="ClientProfile_DeleteClicked"
+            UpdateClicked="ClientProfile_UpdateClicked"
             Grid.Column="1">
             <controls:ClientProfile.Style>
                 <Style TargetType="controls:ClientProfile">
