add Breeds view and dependent classes

--- a/GUI/App.xaml
+++ b/GUI/App.xaml
@@ -13,5 +13,9 @@
             <views:ClientsView/>
         </DataTemplate>
 
+        <DataTemplate DataType="{x:Type viewModels:BreedsViewModel}">
+            <views:BreedsView/>
+        </DataTemplate>
+
     </Application.Resources>
 </Application>
