--- a/GUI/Views/MainWindow.xaml
+++ b/GUI/Views/MainWindow.xaml
@@ -23,6 +23,10 @@
                     Height="30"
                     Margin="0,5,0,5"
                     Command="{Binding NavigateToClientsCommand}"/>
+            <Button Content="Employees"
+                    Height="30"
+                    Margin="0,5,0,5"
+                    Command="{Binding NavigateToEmployeesCommand}"/>
             <Button Content="Breeds"
                     Height="30"
                     Margin="0,5,0,5"
