--- a/GUI/Views/BreedsView.xaml
+++ b/GUI/Views/BreedsView.xaml
@@ -32,10 +32,26 @@
             </ItemsControl>
         </StackPanel>
 
+        <StackPanel
+            Grid.Row="1"
+            Background="DarkCyan">
+            <Button 
+                 Content="ADD BREED"
+                 Command="{Binding AddBreedCommand}"/>
+            <Label Content="Name:"/>
+            <RichTextBox>
+                <FlowDocument>
+                    <Paragraph>
+                        <Run Text="{Binding Name, Mode=TwoWay}" />
+                    </Paragraph>
+                </FlowDocument>
+            </RichTextBox>
+        </StackPanel>
+
         <controls:BreedProfile
             Breed="{Binding DataContext.SelectedBreed, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-            DeleteClicked="BreedProfile_DeleteClicked"
-            UpdateClicked="BreedProfile_UpdateClicked"
+            UpdateCommand="{Binding DataContext.UpdateBreedCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            DeleteCommand="{Binding DataContext.DeleteBreedCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             Grid.Column="1">
             <controls:BreedProfile.Style>
                 <Style TargetType="controls:BreedProfile">
@@ -48,16 +64,6 @@
                 </Style>
             </controls:BreedProfile.Style>
         </controls:BreedProfile>
-
-        <StackPanel
-            Grid.Row="1"
-            Background="DarkCyan">
-            <Button 
-                 Content="ADD BREED"
-                 Click="AddBreed_Click"/>
-            <Label Content="Name:"/>
-            <RichTextBox x:Name="richTextBoxName" TextChanged="RichTextBoxName_TextChanged"/>
-        </StackPanel>
 
     </Grid>
 </UserControl>
