--- a/GUI/Views/ClientsView.xaml
+++ b/GUI/Views/ClientsView.xaml
@@ -43,7 +43,7 @@
             <RichTextBox>
                 <FlowDocument>
                     <Paragraph>
-                        <Run Text="{Binding Name, Mode=TwoWay}" />
+                        <Run Text="{Binding EnteredName, Mode=TwoWay}" />
                     </Paragraph>
                 </FlowDocument>
             </RichTextBox>
@@ -51,7 +51,7 @@
             <RichTextBox>
                 <FlowDocument>
                     <Paragraph>
-                        <Run Text="{Binding Address, Mode=TwoWay}" />
+                        <Run Text="{Binding EnteredAddress, Mode=TwoWay}" />
                     </Paragraph>
                 </FlowDocument>
             </RichTextBox>
