--- a/GUI/Views/ApplicationsView.xaml
+++ b/GUI/Views/ApplicationsView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GUI.Views"
+             xmlns:controls="clr-namespace:GUI.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -21,15 +21,63 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <DockPanel
-                            Background="Aqua">
+                            Background="Aqua"
+                            MouseLeftButtonDown="Applications_MouseLeftButton">
                             <Label Content="Client name: "/>
                             <Label Content="{Binding Client.Name}"/>
                             <Label Content="Breed: "/>
                             <Label Content="{Binding Breed.Name}"/>
+                            <Label Content="Completed: "/>
+                            <Label Content="{Binding Completed}"/>
                         </DockPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </StackPanel>
+
+        <StackPanel
+            Background="FloralWhite"
+            Grid.Row="1">
+            <Button 
+                Content="ADD APPLICATION"
+                Command="{Binding AddApplicationCommand}"/>
+            <Label Content="Client:"/>
+            <ComboBox ItemsSource="{Binding Clients}"
+                DisplayMemberPath="Name"
+                SelectedItem="{Binding EnteredClient, Mode=TwoWay}" />
+            <Label Content="Employee:"/>
+            <ComboBox ItemsSource="{Binding Employees}"
+                DisplayMemberPath="Name"
+                SelectedItem="{Binding EnteredEmployee, Mode=TwoWay}" />
+            <Label Content="Breed:"/>
+            <ComboBox ItemsSource="{Binding Breeds}"
+                DisplayMemberPath="Name"
+                SelectedItem="{Binding EnteredBreed, Mode=TwoWay}" />
+            <Label Content="Gender:"/>
+            <ComboBox ItemsSource="{Binding Genders}"
+                SelectedItem="{Binding EnteredGender, Mode=TwoWay}" />
+        </StackPanel>
+        
+        <controls:ApplicationProfile
+            Application="{Binding DataContext.SelectedApplication, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            DeleteCommand="{Binding DataContext.DeleteApplicationCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            UpdateCommand="{Binding DataContext.UpdateApplicationCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            ChangeStatusCommand="{Binding DataContext.ChangeApplicationStatusCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            Employees="{Binding DataContext.Employees, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            Breeds="{Binding DataContext.Breeds, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            Grid.Column="1"
+            Grid.Row="1">
+            <controls:ApplicationProfile.Style>
+                <Style TargetType="controls:ApplicationProfile">
+                    <Setter Property="Visibility" Value="Visible" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DataContext.SelectedApplication, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" Value="{x:Null}">
+                            <Setter Property="Visibility" Value="Hidden" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </controls:ApplicationProfile.Style>
+        </controls:ApplicationProfile>
+
     </Grid>
 </UserControl>
