--- a/GUI/Views/CompetitionsView.xaml
+++ b/GUI/Views/CompetitionsView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:GUI.ViewModels"
+             xmlns:controls="clr-namespace:GUI.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -21,7 +21,8 @@
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <DockPanel
-                            Background="Aqua">
+                            Background="Aqua"
+                            MouseLeftButtonDown="Competitions_MouseLeftButton">
                             <Label Content="Client name: "/>
                             <Label Content="{Binding Name}"/>
                             <Label Content="Date: "/>
@@ -31,5 +32,38 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </StackPanel>
+
+        <StackPanel
+            Grid.Row="1"
+            Background="BurlyWood">
+            <Button 
+                Content="ADD COMPETITION"
+                Command="{Binding AddCompetitionCommand}"/>
+            <Label Content="*Name:"/>
+            <TextBox Text="{Binding EnteredName, Mode=TwoWay}" />
+            <Label Content="*Location:"/>
+            <TextBox Text="{Binding EnteredLocation, Mode=TwoWay}" />
+            <Label Content="*Date:"/>
+            <DatePicker SelectedDate="{Binding EnteredDate, Mode=TwoWay}"/>
+        </StackPanel>
+
+        <controls:CompetitionProfile
+            Competition="{Binding DataContext.SelectedCompetition, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            DeleteCommand="{Binding DataContext.DeleteCompetitionCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            UpdateCommand="{Binding DataContext.UpdateCompetitionCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            Grid.Column="1"
+            Grid.Row="1">
+            <controls:CompetitionProfile.Style>
+                <Style TargetType="controls:CompetitionProfile">
+                    <Setter Property="Visibility" Value="Visible" />
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding DataContext.SelectedCompetition, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" Value="{x:Null}">
+                            <Setter Property="Visibility" Value="Hidden" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </controls:CompetitionProfile.Style>
+        </controls:CompetitionProfile>
+
     </Grid>
 </UserControl>
