add deleting participations

--- a/GUI/Views/AnimalsView.xaml
+++ b/GUI/Views/AnimalsView.xaml
@@ -99,6 +99,9 @@
                             <Label Content="{Binding Competition.Name}"/>
                             <Label Content="Award:"/>
                             <Label Content="{Binding Award}"/>
+                            <Button Content="DELETE"
+                                    Command="{Binding DataContext.DeleteParticipationCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                    CommandParameter="{Binding}"/>
                         </DockPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
